--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "name": "desafio-foodfy",
     "version": "1.0.0",
     "description": "Project developed in the Bootcamp LaunchBase 3.0",
-    "main": "data.js",
+    "main": "server.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "nodemon server.js"
     },
     "repository": {
         "type": "git",
